--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,22 @@
 # Read about how to use .gitignore: https://help.github.com/articles/ignoring-files
 
 
-doubts.txt
 
+
+# OS generated files
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+
+# Project files
+####################
 /other_files
-
+doubts.txt
+workspace.xml
+*.pyc
